Standard routing for location module in backend application

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,6 +1,15 @@
 # You can find more information about this file on the symfony website:
 # http://www.symfony-project.org/reference/1_4/en/10-Routing
 
+location:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                location
+    module:               location
+    prefix_path:          /location
+    column:               id
+    with_wildcard_routes: true
+
 arranger:
   class: sfDoctrineRouteCollection
   options:
