Default homepage in backend application is in module event, action index

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -40,7 +40,7 @@ category:
 # default rules
 homepage:
   url:   /
-  param: { module: default, action: index }
+  param: { module: event, action: index }
 
 # generic rules
 # please, remove them by adding more specific rules
