Show status string when listing location reservatiions

--- a/apps/backend/modules/location_reservation/config/generator.yml
+++ b/apps/backend/modules/location_reservation/config/generator.yml
@@ -13,9 +13,10 @@ generator:
 
     config:
       actions: ~
-      fields:  ~
+      fields:
+        statusString: { label: "Status" }
       list:
-        display: [=title, status, arranger, location, activatedRequirements, updated_at]
+        display: [=title, statusString, arranger, location, activatedRequirements, updated_at]
       filter:  ~
       form:    ~
       edit:    ~
