--- a/apps/backend/modules/event/config/generator.yml
+++ b/apps/backend/modules/event/config/generator.yml
@@ -21,12 +21,14 @@ generator:
         location_id: { label: Recurring location, help: "Specify recurring location, takes preferance over custom location" }
       list:
         title: Eventlist
-        sort: [startDate, asc]
+        sort: [startDate, asc, startTime, asc, title, asc]
         layout: stacked
         display: [=title, startDate, updated_at]
         params: |
-          %%is_accepted%% %%title%% at %%location%% %%_mergedStartDateTime%% by %%arranger%%. 
-          <small>Updated at %%updated_at%%. Created at %%created_at%%.</small>. 
+          %%is_accepted%% %%_linkToShowEvent%%<br />At %%location%% %%_mergedStartDateTime%% by %%arranger%%.<br />
+          %%_eventHasFestival%%
+          <small>Updated at %%updated_at%%. Created at %%created_at%%.</small>
+        table_method: defaultJoins
       filter:  ~
       form:    ~
       edit:
