Add module festival to application backend

--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1,3 +1,12 @@
+festival:
+  class: sfDoctrineRouteCollection
+  options:
+    model:                festival
+    module:               festival
+    prefix_path:          /festival
+    column:               id
+    with_wildcard_routes: true
+
 location_reservation:
   class: sfDoctrineRouteCollection
   options:
