--- a/apps/backend/config/view.yml
+++ b/apps/backend/config/view.yml
@@ -14,7 +14,7 @@ default:
 
   stylesheets:    [main.css]
 
-  javascripts:    []
+  javascripts:    [https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js, adminTools.js]
 
   has_layout:     true
   layout:         layout
