--- a/apps/backend/modules/festival/config/generator.yml
+++ b/apps/backend/modules/festival/config/generator.yml
@@ -2,7 +2,7 @@ generator:
   class: sfDoctrineGenerator
   param:
     model_class:           festival
-    theme:                 admin
+    theme:                 customAdmin
     non_verbose_templates: true
     with_show:             true
     singular:              ~
