--- a/apps/backend/modules/location/config/generator.yml
+++ b/apps/backend/modules/location/config/generator.yml
@@ -2,7 +2,7 @@ generator:
   class: sfDoctrineGenerator
   param:
     model_class:           location
-    theme:                 admin
+    theme:                 customAdmin
     non_verbose_templates: true
     with_show:             false
     singular:              ~
