Add more categories to the fixtures

--- a/data/fixtures/00_fixtures.yml
+++ b/data/fixtures/00_fixtures.yml
@@ -10,6 +10,14 @@ category:
     name: Konsert
   debate:
     name: Debatt
+  theater:
+    name: Teater
+  cinema:
+    name: Kino
+  club:
+    name: Klubb
+  quiz:
+    name: Quiz
 
 location:
   Kvarteret:
