--- a/apps/backend/modules/arranger/config/generator.yml
+++ b/apps/backend/modules/arranger/config/generator.yml
@@ -15,6 +15,7 @@ generator:
       actions: ~
       fields:  ~
       list:
+        max_per_page: 10
         title: Arranger management
         display: [=name, created_at, updated_at]
       filter:  ~
