--- a/apps/backend/modules/category/config/generator.yml
+++ b/apps/backend/modules/category/config/generator.yml
@@ -15,6 +15,7 @@ generator:
       actions: ~
       fields:  ~
       list:
+        max_per_page: 10
         display: [ =name, created_at, updated_at ]
         title: Category management
       filter:  ~
