--- a/apps/backend/modules/location/config/generator.yml
+++ b/apps/backend/modules/location/config/generator.yml
@@ -15,6 +15,7 @@ generator:
       actions: ~
       fields:  ~
       list:
+        max_per_page: 10
         title: Locations
         display: [=name]
         # It's not possible to sort by name by the very nature of nested sets
