--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -6,6 +6,12 @@ homepage:
   url:   /
   param: { module: event, action: index }
 
+homepage_localized:
+  url:   /:sf_culture/
+  param: { module: event, action: index }
+  requirements:
+    sf_culture: (?:en|no)
+
 api_upcomingEvents:
   url: /api/:sf_format/upcomingEvents/*
   param: { module: api , action: upcomingEvents }
@@ -27,8 +33,10 @@ api:
 # generic rules
 # please, remove them by adding more specific rules
 default_index:
-  url:   /:module
+  url:   /:sf_culture/:module
   param: { action: index }
+  requirements: { sf_culture: (?:en|no) }
 
 default:
-  url:   /:module/:action/*
+  url:   /:sf_culture/:module/:action/*
+  requirements: { sf_culture: (?:en|no) }
