--- a/apps/frontend/config/app.yml
+++ b/apps/frontend/config/app.yml
@@ -2,4 +2,9 @@
 # http://www.symfony-project.org/reference/1_4/en/11-App
 
 # default values
-#all:
+all:
+  max_events_on_page: 10
+  max_arrangers_on_page: 10
+  max_categories_on_page: 10
+  max_locations_on_page: 10
+  max_festivals_on_page: 10
