--- a/apps/backend/modules/arranger/config/generator.yml
+++ b/apps/backend/modules/arranger/config/generator.yml
@@ -16,6 +16,7 @@ generator:
       fields:  ~
       list:
         max_per_page: 10
+        sort: [name, asc]
         title: Arranger management
         display: [=name, created_at, updated_at]
       filter:  ~
