--- a/apps/backend/modules/category/config/generator.yml
+++ b/apps/backend/modules/category/config/generator.yml
@@ -16,6 +16,7 @@ generator:
       fields:  ~
       list:
         max_per_page: 10
+        sort: [name, asc]
         display: [ =name, created_at, updated_at ]
         title: Category management
       filter:  ~
