--- a/apps/backend/modules/festival/config/generator.yml
+++ b/apps/backend/modules/festival/config/generator.yml
@@ -17,7 +17,7 @@ generator:
       list:
         max_per_page: 10
         title: Festival list
-        sort: [startDate, asc]
+        sort: [startDate, asc, title, asc]
         layout: stacked
         display: [=title, startDate, updated_at]
         params: |
