--- a/apps/backend/modules/location_reservation/config/generator.yml
+++ b/apps/backend/modules/location_reservation/config/generator.yml
@@ -16,6 +16,7 @@ generator:
       fields:
         statusString: { label: "Status" }
       list:
+        sort: [startDate, asc, title, asc]
         max_per_page: 10
         display: [=title, statusString, arranger, location, activatedRequirements, updated_at]
       filter:  ~
