Set credentials for the modules arranger, category and locations in backend
These will apply to all users not having the admin permission

--- a/apps/backend/modules/arranger/config/generator.yml
+++ b/apps/backend/modules/arranger/config/generator.yml
@@ -12,7 +12,11 @@ generator:
     actions_base_class:    sfActions
 
     config:
-      actions: ~
+      actions:
+        _new:
+          credentials: [admin]
+        _delete:
+          credentials: [admin]
       fields:  ~
       list:
         max_per_page: 10
