--- a/apps/backend/modules/location/config/generator.yml
+++ b/apps/backend/modules/location/config/generator.yml
@@ -12,7 +12,13 @@ generator:
     actions_base_class:    sfActions
 
     config:
-      actions: ~
+      actions:
+        _edit:
+          credentials: [admin]
+        _delete:
+          credentials: [admin]
+        _new:
+          credentials: [admin]
       fields:  ~
       list:
         max_per_page: 10
