Add credentials to arranger module

--- a/apps/backend/modules/arranger/config/security.yml
+++ b/apps/backend/modules/arranger/config/security.yml
@@ -3,5 +3,17 @@
 new:
   credentials: [admin]
 
+create:
+  credentials: [admin]
+
 delete:
   credentials: [admin]
+
+batchDelete:
+  credentials: [admin]
+
+edit:
+  credentials: [[admin, owner]]
+
+update:
+  credentials: [[admin, owner]]
