Set table method to defaultJoinsAndRequirements in event generator.yml

--- a/apps/backend/modules/event/config/generator.yml
+++ b/apps/backend/modules/event/config/generator.yml
@@ -29,7 +29,7 @@ generator:
           %%is_accepted%% %%_linkToShowEvent%%<br />At %%location%% %%_mergedStartDateTime%% by %%arranger%%.<br />
           %%_eventHasFestival%%
           <small>Updated at %%updated_at%%. Created at %%created_at%%.</small>
-        table_method: defaultJoins
+        table_method: defaultJoinsAndRequirements # defaultJoinsAndRequirements will make it impossible to get event lists vefore current date
       filter:  ~
       form:    ~
       edit:
