--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -4,7 +4,7 @@
 # default rules
 homepage:
   url:   /
-  param: { module: event, action: index }
+  param: { module: dakEventAdmin, action: index }
 
 # generic rules
 # please, remove them by adding more specific rules
