--- a/apps/frontend/config/settings.yml
+++ b/apps/frontend/config/settings.yml
@@ -34,6 +34,15 @@ all:
     # Enable the database manager
     use_database:           true
 
+    enabled_modules:
+      - default
+      - dakApi
+      - dakEvent
+      - dakFestival
+      - dakArranger
+      - dakLocation
+      - dakCategory
+
     # Default charset
     charset: utf-8
 
