--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -6,6 +6,11 @@ homepage:
   url:   /
   param: { module: dakEvent, action: index }
 
+homepage_localized:
+  url:   /
+  param: { module: dakEvent, action: index }
+  requirements: { sf_culture: (?:en|no) }
+
 # generic rules
 # please, remove them by adding more specific rules
 default_index:
