Enable module sfImageTransformator in all applications

--- a/apps/backend/config/settings.yml
+++ b/apps/backend/config/settings.yml
@@ -41,6 +41,7 @@ all:
       - sfGuardUser
       - sfGuardPermission
       - sfGuardGroup
+      - sfImageTransformator
       - dakEventAdmin
       - dakFestivalAdmin
       - dakArrangerAdmin
