--- a/apps/backend/config/view.yml
+++ b/apps/backend/config/view.yml
@@ -14,7 +14,9 @@ default:
 
   stylesheets:    [main.css]
 
-  javascripts:    [https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js]
+  javascripts:
+    - https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js
+    - https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js
 
   has_layout:     true
   layout:         layout
