Add jQuery UI css to main stylesheets to load

--- a/apps/backend/config/view.yml
+++ b/apps/backend/config/view.yml
@@ -12,7 +12,9 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [main.css]
+  stylesheets:
+    - ui-lightness/jquery-ui.css
+    - main.css
 
   javascripts:
     - https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js
