Update jQuery refs

--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -14,7 +14,8 @@ default:
 
   stylesheets:    [main.css]
 
-  javascripts:    []
+  javascripts:
+    - https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js
 
   has_layout:     true
   layout:         layout
