Set config for frontend and backend links turned off by default

--- a/config/app.yml
+++ b/config/app.yml
@@ -6,5 +6,5 @@ all:
     font_dir:     %SF_PLUGINS_DIR%/sfImageTransformExtraPlugin/data/example-resources/fonts
 
   applicationLinks: # These urls can be environment aware too
-    frontend: "http://localhost/" # Change this to whatever your frontend address is
-    backend: "http://localhost/backend.php" # Change this to whatever your backend address is
+    #frontend: "http://localhost/ # Change this to whatever your frontend address is
+    #backend: "http://localhost/backend.php" # Change this to whatever your backend address is
