Add sample configuration for the ping system

--- a/apps/backend/config/app.yml
+++ b/apps/backend/config/app.yml
@@ -7,3 +7,16 @@
 all:
   ckeditor:
     basePath: '/js/ckeditor/'
+
+#  dakEvents:
+#    pingOnUpdate:
+#      someWordpressSite:
+#        url: 'http://someaddress/xmlrpc.php'
+#        type: xmlrpc-wp
+#        user: admin
+#        pass: test
+#        methodName: someXmlRPCmethodName
+#        arguments: [ user, pass, args ] # default
+#      someSitePing:
+#        type: ping
+#        url: 'http://someaddress/request.php'
